--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 </head>
 
 <body data-sveltekit-preload-data="hover"
-	class="text-default min-h-screen bg-zinc-100/50 pb-24 text-sm antialiased sm:text-base">
+	class="text-default min-h-screen bg-zinc-100 pb-24 text-sm antialiased sm:text-base">
 	<div style="display: contents">%sveltekit.body%</div>
 </body>
 
